--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,9 +5,12 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
+        <%= render 'shared/stats' %>
+      </section>
+      <section>
         <%= render 'shared/micropost_form' %>
       </section>
-    </aside>
+    </aside> <!-- why was that an aside? -->
     <div class="span8">
       <h3>Micropost Feed</h3>
       <%= render 'shared/feed' %>
