A few touch-ups

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <a href="http://railstutorial.org/">Rails Tutorial</a>
-    by Michael Hartl
+    by Michael Hartl. Realized by <a href="http://kevinswallow.com">Kevin Swallow.</a>
   </small>
   <nav>
     <ul>
