--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,6 +62,10 @@ p {
   line-height: 1.7em;
 }
 
+em {
+  font-size: 24px;
+}
+
 
 /* header */
 
@@ -106,7 +110,14 @@ footer {
     }
   }
 }
-
+#footer {
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:30px;
+   width:100%;
+   background:#999;
+}
 /* miscellaneous */
 
 .debug_dump {
