--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,10 +21,13 @@
     <h1>Welcome to the Practice App</h1>
 
     <h2>
-      This is <a href="http://kevinswallow.com">Kevin Swallow's</a> demo of 
+      This is <a href="http://kevinswallow.com">Kevin Swallow's</a> implementation of 
       <a href="http://railstutorial.org/">Michael Hartl's Ruby on Rails </a>
       Tutorial.
     </h2>
+    <p><em>
+      A Twitter clone built with Ruby on Rails, Bootstrap-Sass, Sqlite3, RSpec and Capybara using TDD, RVM and <a href="https://github.com/Sambalero/h33">Git</a>, deployed on Heroku with Postgres. 
+    </em></p>
 <%= link_to "Visit my Home Page!", "http://kevinswallow.com", 
                                 class: "btn btn-large btn-primary" %>
     <%= link_to "Sign up for the Practice App!", signup_path, 
